--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chopmaster Restaurant</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav id="navcontainer">
+        <div id="brand">
+          <img class="logo" src="./img/jr.png" alt="" />
+        </div>
+        <ul id="navlinkscontainer">
+          <button class="btn" id="home">Home</button>
+          <button class="btn" id="menu">Menu</button>
+          <button class="btn" id="about">About</button>
+          <button class="btn" id="contact">Contact</button>
+        </ul>
+      </nav>
+    </header>
+    <main id="content"></main>
+  </body>
 </html>
